# bullet3-ruby

./: .gitignore  CHANGELOG.md  Gemfile  README.md  Rakefile  bullet3-ruby.gemspec  bullet3.gemspec  bullet_ruby.gemspec
.github/workflows/: main.yml
data/: cube.urdf  plane.urdf
examples/: hello_world.rb  ray_casting.rb  soft_body.rb  urdf.rb  vehicle.rb
ext/bullet3/: CMakeLists.txt  bullet3.cpp  extconf.rb
ext/bullet3/collision/: rb_collision.cpp  rb_collision.hpp
ext/bullet3/collision/shapes/: rb_collision_shape.cpp  rb_collision_shape.hpp
ext/bullet3/constraints/: rb_constraints.cpp  rb_constraints.hpp
ext/bullet3/dynamics/: rb_dynamics.cpp  rb_dynamics.hpp
ext/bullet3/io/: rb_io.cpp  rb_io.hpp
ext/bullet3/linear_math/: rb_matrix3x3.cpp  rb_matrix3x3.hpp  rb_quaternion.hpp  rb_transform.cpp  rb_transform.hpp  rb_vector3.cpp
ext/bullet3/multi_body/: rb_multi_body.cpp  rb_multi_body.hpp
ext/bullet3/soft_body/: rb_soft_body.cpp  rb_soft_body.hpp
ext/bullet3/util/: rb_debug_draw.cpp  rb_debug_draw.hpp  ruby_cpp_compat.hpp  type_conversions.hpp
ext/bullet3/vehicle/: rb_vehicle.cpp  rb_vehicle.hpp
ext/bullet_ruby/: CMakeLists.txt  bullet_ruby.cpp  extconf.rb
ext/bullet_ruby/collision/: rb_collision.cpp  rb_collision.hpp
ext/bullet_ruby/collision/shapes/: rb_collision_shape.cpp
ext/bullet_ruby/constraints/: rb_constraints.cpp  rb_constraints.hpp
ext/bullet_ruby/dynamics/: rb_dynamics.cpp  rb_dynamics.hpp
ext/bullet_ruby/io/: rb_io.cpp  rb_io.hpp
ext/bullet_ruby/linear_math/: rb_quaternion.cpp  rb_transform.cpp  rb_transform.hpp  rb_vector3.cpp  rb_vector3.hpp
ext/bullet_ruby/multi_body/: rb_multi_body.cpp  rb_multi_body.hpp
ext/bullet_ruby/soft_body/: rb_soft_body.cpp  rb_soft_body.hpp
ext/bullet_ruby/util/: rb_debug_draw.cpp  rb_debug_draw.hpp  type_conversions.hpp
ext/bullet_ruby/vehicle/: rb_vehicle.cpp  rb_vehicle.hpp
lib/: bullet3.rb  bullet_ruby.rb
lib/bullet/: collision.rb  constraints.rb  data.rb  debug_draw.rb  dynamics.rb  io.rb  multi_body.rb  simulation.rb  soft_body.rb  version.rb
lib/bullet/linear_math/: matrix3x3.rb  quaternion.rb  transform.rb  vector3.rb
lib/bullet3/: collision.rb  constraints.rb  data.rb  debug_draw.rb  dynamics.rb  io.rb  linear_math.rb  multi_body.rb  simulation.rb  soft_body.rb  version.rb
lib/bullet3/linear_math/: matrix3x3.rb  quaternion.rb  transform.rb  vector3.rb
lib/bullet_ruby/: version.rb
sig/: bullet3.rbs  bullet_ruby.rbs
spec/: bullet3_spec.rb  bullet_ruby_spec.rb  data_spec.rb  debug_draw_spec.rb  io_spec.rb  simulation_spec.rb  spec_helper.rb
spec/collision/: collision_world_spec.rb  shapes_spec.rb
spec/constraints/: constraints_spec.rb
spec/dynamics/: dynamics_world_spec.rb  ray_and_contact_spec.rb  rigid_body_spec.rb
spec/integration/: hello_world_spec.rb
spec/linear_math/: matrix3x3_spec.rb  quaternion_spec.rb  transform_spec.rb  vector3_spec.rb
spec/multi_body/: multi_body_spec.rb
spec/soft_body/: soft_body_spec.rb
spec/vehicle/: vehicle_spec.rb
